# opaque

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
opaque/: beta_regression.py  betabinomial_regression.py  download.py  locations.py  train.py  utils.py
opaque/nlp/: featurize.py  models.py
opaque/ood/: __init__.py  _tree_kernel.c  _tree_kernel.pyx  forest_svm.py  svm.py  tree_kernel.py  utils.py
opaque/simulations/: end_to_end.py  prevalence.py  sens_spec.py
opaque/stats/: __init__.py  _stats.c  _stats.pyx  stats.py
opaque/tests/: test_confidence_intervals.py  test_end_to_end.py  test_importance_sampling.py  test_log_betainc.py  test_prevalence_cdf.py  test_prevalence_cdf_fixed.py  test_stats.py
opaque/tests/data/: prevalence_cdf_simulation0.json  prevalence_cdf_simulation1.json  prevalence_cdf_simulation2.json  prevalence_cdf_simulation_fixed0.json  prevalence_cdf_simulation_fixed1.json  prevalence_cdf_simulation_fixed2.json
scripts/: generate_test_data.py
scripts/train_betabinom/: collect_best_hps.py  collect_validation_results.py  datasplits.py  hp_search.py  make_datasplits.py  naive_interval_results.py  outer_hp_search.py  plots.py  simple_prior_validation_results.py  train.py  train_model.py  validate.py
src/opaque/: betabinomial_regression.py  download.py  locations.py  results.py  train.py  utils.py
src/opaque/nlp/: featurize.py
src/opaque/ood/: _tree_kernel.c  svm.py
src/opaque/simulations/: __init__.py  end_to_end.py  prevalence.py
src/opaque/stats/: __init__.py  _stats.c  _stats.pyx  stats.py
tests/: test_log_betainc.py  test_prevalence_cdf.py  test_prevalence_cdf_fixed.py
tests/data/: prevalence_cdf_simulation2.json  prevalence_cdf_simulation_fixed0.json
