[metadata]
name = opaque
version = 0.0.0
description = Outlier prevalence analysis for quantification of unknown entities
long_description = file: README.md
long_description_content_type = text/markdown

# Author information
author = opaque developers, Harvard medical School
author_email = albert.steppi@gmail.com

# License information
license = BSD 2-Clause
license_file = LICENSE

# Search tags
classifiers =
	    Development Status :: 4 - Beta
	    Programming Language :: Python
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
keywords =
	 machine learning
	 biomedical text mining
	 named entity disambiguation
	 quantification learning
	 open world learning

[options]
install_requires =
		 appdirs
		 boto3
		 botocore
		 cloudpickle
		 cython
		 gensim
		 liblinear-official
		 pymc
		 scikit-learn
		 statsmodels
		 
zip_safe = False
packages = find:
package_dir =
	    = src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
test =
     mpmath
     pandas
     pytest
     pytest-cov

scripts =
	click
	networkx
	pandas